--- a/css/styles.css
+++ b/css/styles.css
@@ -472,7 +472,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-around;
-        align-items: center;
+        align-items: start;
         margin: 5em auto;
         width: 80%; 
         height: fit-content;
@@ -485,6 +485,7 @@
     .Section__Worlds-top {
         min-height: 50vh;
         margin-top: 5em;
+        align-items: center;
     }
 
 	@media (orientation:portrait) {
